# Tp-Sem1-C-CPP

./: .github-ci.yml  .gitignore  README.md
.github/workflows/: github-ci.yml
project/: CMakeLists.txt
project/.build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
project/CMakeModules/: CodeCoverage.cmake
project/files/: test1_o.txt  test1_s.txt  test2_s.txt  test3_o.txt  test3_s.txt  test4_o.txt  test5_o.txt  test5_s.txt  test6_o.txt  test6_s.txt
project/files/answers/: answer1.txt  answer2.txt  answer4.txt  answer5.txt  answer6.txt
project/gtests/: CMakeLists.txt  tests.cpp
project/include/: funcs.h  order_struct.h
project/lib/files_and_strs_manage/: files_and_strs_manage.c  files_and_strs_manage.h
project/lib/search_substr_c/: search_substr_c.c  search_substr_c.h
project/lib/search_substr_p/: search_substr_p.c  search_substr_p.h
project/src/: funcs.c  main.c
